# ConstraintPhysics

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConstraintPhysics.sln  ConstraintPhysics.vcxproj  ConstraintPhysics.vcxproj.filters  LICENSE.md  README.md  main.cpp  to_fix_list.txt
ConstraintPhysics/: CMakeLists.txt  ConstraintPhysics.vcxproj  ConstraintPhysics.vcxproj.filters
ConstraintPhysics/src/: AABB.h  AABB_Tree.cpp  AABB_Tree.h  BroadphaseOutput.h  CFM.cpp  CFM.h  CollisionDetect.cpp  CollisionDetect.h  ConstraintSolver.cpp  ConstraintSolver.h  ContactCache.h  ConvexPoly.cpp  ConvexPoly.h  ConvexPrimitive.cpp  ConvexPrimitive.h  Geometry.cpp  Geometry.h  HACD.cpp  HACD.h  HolonomicBlockSolver.cpp  HolonomicBlockSolver.h  Octree.cpp  Octree.h  PersistentConstraint.cpp  PersistentConstraint.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  ThreadManager.cpp  ThreadManager.h
ConstraintPhysics/x64/Debug/: ConstraintPhysics.idb  convexpoly.obj.enc  physicsengine.obj.enc
ConstraintPhysics/x64/Release/: CodeAnalysisResultManifest.txt  CollisionDetect.nativecodeanalysis.sarif  CollisionDetect.nativecodeanalysis.xml  ConstraintPhysics.vcxproj.FileListAbsolute.txt  ConstraintSolver.nativecodeanalysis.sarif  ConstraintSolver.nativecodeanalysis.xml  ConvexPoly.nativecodeanalysis.sarif  ConvexPoly.nativecodeanalysis.xml  PhysicsEngine.nativecodeanalysis.sarif  PhysicsEngine.nativecodeanalysis.xml  RigidBody.nativecodeanalysis.sarif  RigidBody.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters
Demo/Dependencies/: CMakeLists.txt
Demo/resources/bad_apple/: codec_info.txt  info.txt  pre_render_info.txt
Demo/resources/precomputations/: bad_apple_test.txt
Demo/resources/shaders/: AgentColor.shader  Basic.shader
Demo/src/: Camera.h  Mesh.cpp  Mesh.h  ModelReader.cpp  ModelReader.h  ProgressBar.cpp  ProgressBar.h  main.cpp  main_old.cpp
Demo/src/Demos/: AngularMomentumDemo.h  CMakeLists.txt  CarDemo.h  ColActionDemo.h  Common.cpp  Common.h  (+20 more)
Math/: CMakeLists.txt  Mat3.cpp  Mat3.h  Math.vcxproj  Math.vcxproj.filters  Quaternion.h  Vec3.cpp  Vec3.h
Math/src/: Mat3.cpp  Mat3.h  NMat.cpp  NMat.h  NVec.h  Quaternion.h  Vec3.cpp  Vec3.h
(+124 files in other folders)
